--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,17 @@ section {
         @apply xl:mt-20 md:mt-0 mt-40;
     }
 
+    .scroll-item {
+        opacity: 0;
+        filter: blur(20px);
+        transition: all 0.3s ease;
+    }
+
+    .scroll-item .content {
+        max-width: 400px;
+        text-align: center;
+    }
+
     /* General Grids */
     .grid-base {
         @apply grid grid-cols-1;
@@ -125,7 +136,11 @@ section {
         }
 
         .logo {
-            @apply text-white-50 text-xl md:text-2xl font-semibold transition-transform duration-300 hover:scale-105;
+            @apply flex items-center text-white-50 text-xl md:text-2xl font-semibold transition-transform duration-300 hover:scale-105;
+        }
+
+        .logo-wrapper {
+            @apply h-8 w-auto mr-2 flex items-center;
         }
 
         nav.desktop {
@@ -206,20 +221,14 @@ section {
         @apply w-full mt-20 px-5 md:px-20 py-10 md:py-20 flex items-center justify-center;
     }
 
-    .zoom-right {
-        @apply relative h-full xl:w-[50%];
-    }
 
     h2 {
         @apply text-2xl md:text-3xl lg:text-4xl font-bold;
+
     }
 
-    .zoom-left {
-        @apply relative h-full w-full;
-    }
-
-    .showcase1 {
-        @apply xl:h-[70vh] md:h-[50vh] absolute rounded-xl;
+    .scroll-wrapper {
+        @apply xl:h-[100vh] md:h-[100vh] relative;
     }
 
     .cta-wrapper {
@@ -371,7 +380,6 @@ section {
 }
 
 /* Hero Text slider ends */
-
 .gradient-line {
     width: 2px;
     background: linear-gradient(
@@ -434,7 +442,6 @@ section {
 }
 
 /* marquee end */
-
 .card {
     --start: 0;
     position: relative;
